--- a/elements.html
+++ b/elements.html
@@ -49,14 +49,11 @@
 									<!-- Charts  -->
 									<h3><b> Crime Fact Charts</b></h3>
 									<div class="container" >
-											<img src="images/Crime_by_day.png" class="rounded float-left" alt="...">
-											<img src="images/Crime_rate_by_time.png" class="rounded float-right" alt="...">
-											<img src="images/Total_crimes_by_temperature.png" class="rounded float-right" alt="...">
-											<img src="images/Type_of_crime.png" class="rounded float-right" alt="...">
+											<img src="images/Crime_by_day.png" class="rounded float-left" alt="..." style="width:980px;height:900px;"/>
+											<img src="images/Crime_rate_by_time.png" class="rounded float-right" alt="..."style="width:980px;height:900px;"/>
+											<img src="images/Total_crimes_by_temperature.png" class="rounded float-right" alt="..." style="width:980px;height:900px;"/>
+											<img src="images/Type_of_crime.png" class="rounded float-right" alt="..." style="width:980px;height:800px;"/>
 									 </div>
-
-					
-
 							</div>
 						</div>
 					</div>
